# Kurs_rabota_5

./: README.md  main.py  pyproject.toml
src/: classes.py  utils.py
