[tool.poetry]
name = "kurs-rabota-5"
version = "0.1.0"
description = ""
authors = ["Леонид Петров <leonidpetrov637@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
